[package]
name = "bitcoin-tapscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.30.0"
jsonrpsee = { version = "0.16", features = ["server"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sha3 = "0.10.7"
tokio = { version = "1.28.0", features = ["tokio-macros"] }
